# PhoenixOS2

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
boot/x86_64/multiboot2/: CMakeLists.txt  grub.cfg  linker.ld
boot/x86_64/multiboot2/include/boot/x86_64/multiboot2/: header.hpp
boot/x86_64/multiboot2/src/: entry.cpp  header.cpp
kernel/: CMakeLists.txt
kernel/include/kernel/: kernel.hpp  kmem.hpp
kernel/src/: kernel.cpp
src/boot/multiboot2/: boot.asm  multiboot_header.asm
